--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "catherine",
   "license": "ISC",
   "devDependencies": {
-    "cypress-fill-command": "^1.0.2"
+    "cypress-fill-command": "^1.0.2",
+    "start-server-and-test": "^1.15.2"
   },
   "dependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^15.0.0",
