--- a/cypress/.vscode/settings.json
+++ b/cypress/.vscode/settings.json
@@ -1,7 +1,64 @@
+// {
+//     "cucumberautocomplete.steps": [
+//         "test/features/step_definitions/*.js",
+//         "node_modules/qa-lib/src/step_definitions/*.js"
+//     ],
+//     "cucumberautocomplete.strictGherkinCompletion": true
+// }
 {
+
     "cucumberautocomplete.steps": [
-        "test/features/step_definitions/*.js",
-        "node_modules/qa-lib/src/step_definitions/*.js"
+
+        "cypress/**/**/*.js"
+
     ],
-    "cucumberautocomplete.strictGherkinCompletion": true
+
+    "cucumberautocomplete.syncfeatures": "/cypress/**/*/*.feature",
+
+    "cucumberautocomplete.strictGherkinCompletion": true,
+
+    "cucumberautocomplete.strictGherkinValidation": true,
+
+    "cucumberautocomplete.smartSnippets": true,
+
+    "cucumberautocomplete.stepsInvariants": true,
+
+    "cucumberautocomplete.customParameters": [
+
+        {
+
+            "parameter": "{ab}",
+
+            "value": "(a|b)"
+
+        }
+
+    ],
+
+    "cucumberautocomplete.skipDocStringsFormat": true,
+
+    "cucumberautocomplete.formatConfOverride": {
+
+        "And": 3,
+
+        "But": "relative"
+
+    },
+
+    "cucumberautocomplete.onTypeFormat": true,
+
+    "editor.quickSuggestions": {
+
+        "comments": false,
+
+        "strings": true,
+
+        "other": true
+
+    },
+
+    "cucumberautocomplete.gherkinDefinitionPart": "(Given|When|Then)\\(",
+
+    "cucumberautocomplete.stepRegExSymbol": "'"
+
 }
