--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "catherine",
   "license": "ISC",
   "devDependencies": {
+    "@cypress-audit/lighthouse": "^1.3.1",
     "cypress-fill-command": "^1.0.2",
     "cypress-wait-until": "^1.7.2",
+    "faker": "^5.5.3",
     "start-server-and-test": "^1.15.2"
   },
   "dependencies": {
