--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "devDependencies": {
     "@cypress-audit/lighthouse": "^1.3.1",
+    "@testing-library/cypress": "^9.0.0",
+    "chai": "^4.3.7",
+    "cypress": "^12.5.1",
+    "cypress-audit": "^1.1.0",
     "cypress-fill-command": "^1.0.2",
     "cypress-wait-until": "^1.7.2",
     "faker": "^5.5.3",
@@ -18,7 +22,6 @@
   },
   "dependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^15.0.0",
-    "@cypress/webpack-preprocessor": "^5.15.7",
-    "cypress": "^12.1.0"
+    "@cypress/webpack-preprocessor": "^5.15.7"
   }
 }
